--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,22 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "react-scripts": "0.8.4"
+  },
+  "dependencies": {
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "axios": "^0.14.0",
+    "express": "^4.14.0",
+    "history": "^3.0.0",
+    "react-router": "^2.6.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
